--- a/jenkins-slaves/nodejs8-angular/Dockerfile.rhel7
+++ b/jenkins-slaves/nodejs8-angular/Dockerfile.rhel7
@@ -58,9 +58,8 @@ RUN curl --silent --location https://rpm.nodesource.com/setup_8.x | bash - && \
 
 COPY npmrc $HOME/.npm-global/etc/npmrc
 
-RUN sed -i .bak -e "s|NEXUS_HOST|$NEXUS_HOST|g" $HOME/.npm-global/etc/npmrc && \
-    sed -i .bak -e "s|NEXUS_AUTH|$(echo -n $NEXUS_AUTH | base64)|g" $HOME/.npm-global/etc/npmrc && \
-    rm $HOME/.npm-global/etc/npmrc.bak && \
+RUN sed -i "s|NEXUS_HOST|$NEXUS_HOST|g" $HOME/.npm-global/etc/npmrc && \
+    sed -i "s|NEXUS_AUTH|$(echo -n $NEXUS_AUTH | base64)|g" $HOME/.npm-global/etc/npmrc && \
     npm install -g @angular/cli@1.6.5 --unsafe-perm=true --allow-root && \
     npm install -g cypress@2.1.0 --unsafe-perm=true --allow-root > /dev/null && \
     npm --version && \
