--- a/jenkins-slaves/nodejs8-angular/ocp-config/bc.yml
+++ b/jenkins-slaves/nodejs8-angular/ocp-config/bc.yml
@@ -23,10 +23,10 @@ objects:
     resources: {}
     runPolicy: Serial
     source:
-      contextDir: nodejs8-angular
+      contextDir: jenkins-slaves/nodejs8-angular
       git:
         ref: production
-        uri: ${REPO_BASE}/opendevstack/jenkins-slaves-dockerimages.git
+        uri: ${REPO_BASE}/opendevstack/ods-project-quickstarters.git
       sourceSecret:
         name: cd-user-token
       type: Git
