--- a/rundeck-jobs/quickstarts/be_spring_boot.yaml
+++ b/rundeck-jobs/quickstarts/be_spring_boot.yaml
@@ -27,6 +27,7 @@
     required: true
     secure: true
     storagePath: keys/openshift-api-token
+    valueExposed: true
   scheduleEnabled: true
   sequence:
     commands:
