--- a/rundeck-jobs/common/prepare-continuous-integration-rshiny.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration-rshiny.yaml
@@ -31,7 +31,7 @@
   sequence:
     commands:
     - description: clone quickstarter project
-      exec: mkdir /tmp/rundeck_${job.id}_${job.execid} && cd  /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ocp-quickstarters.git && cd ocp-quickstarters && git checkout -b production origin/production
+      exec: mkdir /tmp/rundeck_${job.id}_${job.execid} && cd  /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters && cd ods-project-quickstarters/ocp-quickstarters && git checkout -b production origin/production
     - description: create rshiny app in openshift
       jobref:
         args: -project_id ${option.project_id} -component_id ${option.component_id} -git_url_http ${option.git_url_http}
@@ -39,7 +39,7 @@
         name: create-rshiny
         nodeStep: 'true'
     - description: push repository to github
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ocp-quickstarters && ./git_push.sh --dir ${option.quickstarter_directory} --url ${option.git_url_ssh}
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/boilerplates && ./git_push.sh --dir ${option.quickstarter_directory} --url ${option.git_url_ssh}
     keepgoing: false
     pluginConfig:
       WorkflowStrategy:
