--- a/rundeck-jobs/common/verify global rundeck settings.yaml
+++ b/rundeck-jobs/common/verify global rundeck settings.yaml
@@ -2,7 +2,7 @@
   executionEnabled: true
   group: common
   id: ec883e36-6ede-4017-8750-1aa0014cc1e3
-  loglevel: INFO
+  loglevel: DEBUG
   name: verify global rundeck settings
   nodeFilterEditable: false
   options:
@@ -19,15 +19,17 @@
     - description: create tmp dir for job
       exec: mkdir /tmp/rundeck_${job.id}_${job.execid}
     - description: clone oc script project
-      exec: cd /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ocp-templates.git && cd ocp-templates && git checkout -b production origin/production
+      exec: cd /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters && ls -la && cd ocp-templates && git checkout -b production origin/production
     - description: create docker container for openshift client
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ocp-templates && sudo docker build -t oc .
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker build -t oc .
     - description: OC login test
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ocp-templates  && sudo docker run --rm oc /bin/bash -c "oc login ${globals.openshift_apihost} --token=${option.openshift_api_token}"
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates  && sudo docker run --rm oc /bin/bash -c "oc login ${globals.openshift_apihost} --token=${option.openshift_api_token}"
     - description: verify nexus host availability
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ocp-templates  && sudo docker run --rm oc /bin/bash -c "curl -f ${globals.nexus_host}"
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates  && sudo docker run --rm oc /bin/bash -c "curl -f ${globals.nexus_host}"
     - description: 'verify bitbucket host '
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ocp-templates  && sudo docker run --rm oc /bin/bash -c "curl -f ${globals.bitbucket_host}"
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates  && sudo docker run --rm oc /bin/bash -c "curl -f ${globals.bitbucket_host}"
+    - description: verify openshift registry access
+      exec: sudo docker login -u ${globals.openshift_user} -p ${option.openshift_api_token} ${globals.openshift_dockerregistry}
     keepgoing: false
     pluginConfig:
       WorkflowStrategy:
