--- a/rundeck-jobs/openshift/check insecure OC routes.yaml
+++ b/rundeck-jobs/openshift/check insecure OC routes.yaml
@@ -35,10 +35,10 @@
     - description: create job dir
       exec: mkdir /tmp/rundeck_${job.id}_${job.execid}
     - description: clone repo and execute script
-      exec: cd /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ocp-templates.git && cd ocp-templates && git checkout -b production origin/production
+      exec: cd /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters/ocp-templates && git checkout -b production origin/production
     - description: build container
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ocp-templates && sudo docker build -t oc .
-    - exec: cd /tmp/rundeck_${job.id}_${job.execid}/ocp-templates && sudo docker run --rm oc /bin/bash -c "ls -ls && ./check_ocp_secure_routes.sh -h ${globals.openshift_apihost} -t ${option.openshift_api_token} -p ${option_project_names}"
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker build -t oc .
+    - exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker run --rm oc /bin/bash -c "ls -ls && ./check_ocp_secure_routes.sh -h ${globals.openshift_apihost} -t ${option.openshift_api_token} -p ${option_project_names}"
     keepgoing: false
     pluginConfig:
       WorkflowStrategy:
