--- a/rundeck-jobs/quickstarts/rshiny_app.yaml
+++ b/rundeck-jobs/quickstarts/rshiny_app.yaml
@@ -1,4 +1,4 @@
-- description: Create a RShiny app
+- description: Create an RShiny app
   executionEnabled: true
   group: quickstarts
   id: 69405fd4-b0c2-45a8-a6dc-0870ea56166e
@@ -23,6 +23,7 @@
     required: true
     secure: true
     storagePath: keys/openshift-api-token
+    valueExposed: true
   scheduleEnabled: true
   sequence:
     commands:
@@ -36,7 +37,7 @@
         mkdir /tmp/rundeck_@job.id@_@job.execid@/@option.component_id@
         cd /tmp/rundeck_@job.id@_@job.execid@/@option.component_id@
         echo "copy rshiny files from quickstart to generated project"
-        cp -rv /tmp/rundeck_@job.id@_@job.execid@/ocp-quickstarters/rshiny/* .
+        cp -rv /tmp/rundeck_@job.id@_@job.execid@/ocp-quickstarters/boilerplates/rshiny/* .
     - description: setup quickstarter for continuous integration
       jobref:
         args: -component_id ${option.component_id} -project_id ${option.project_id} -quickstarter_directory /tmp/rundeck_${job.id}_${job.execid}/${option.component_id} -git_url_ssh ${option.git_url_ssh} -git_url_http ${option.git_url_http}
