--- a/boilerplates/fe-react/Jenkinsfile
+++ b/boilerplates/fe-react/Jenkinsfile
@@ -1,6 +1,5 @@
 def final projectId = '@project_id@'
 def final componentId = '@component_id@'
-def final groupId = '@group_id@'
 def final credentialsId = "${projectId}-cd-cd-user-with-password"
 def sharedLibraryRepository
 def dockerRegistry
@@ -19,15 +18,13 @@ odsPipeline(
   image: "${dockerRegistry}/cd/jenkins-slave-nodejs8-angular",
   projectId: projectId,
   componentId: componentId,
-  groupId: groupId,
   verbose: true
 ) { context ->
   stageBuild(context)
   stageUnitTest(context)
   stageScanForSonarqube(context)
-  stageUploadToNexus(context)
   stageCreateOpenshiftEnvironment(context)
-  stageUpdateOpenshiftBuild(context)
+  stageStartOpenshiftBuild(context)
   stageDeployToOpenshift(context)
   stageTriggerAllBuilds(context)
 }
@@ -38,7 +35,7 @@ def stageBuild(def context) {
       sh "yarn install"
       sh "yarn build"
     }
-    archiveBuild(context)
+    sh "cp -r build docker/dist"
   }
 }
 
@@ -50,14 +47,3 @@ def stageUnitTest(def context) {
     }
 }
 
-def archiveBuild(def context) {
-  def buildTimestamp = new Date().format("dd.MM.yyyy-HH:mm", TimeZone.getTimeZone('UTC'))
-  writeFile file: "build/version.json", text: """
-            {
-              \"tagVersion\": \"${context.tagversion}\",
-              \"gitCommit\": \"${context.gitCommit}\",
-              \"buildTimestamp\": \"${buildTimestamp}\"
-            }"""
-  def distFile = "${context.componentId}-${context.tagversion}.tar.gz"
-  sh "tar czvf ${distFile} -C build ."
-}
