--- a/ocp-templates/templates/bc-docker.yml
+++ b/ocp-templates/templates/bc-docker.yml
@@ -35,12 +35,7 @@ objects:
         name: ${COMPONENT}:latest
     runPolicy: Serial
     source:
-      type: Git
-      git:
-        uri: https://github.com/opendevstack/example.git
-      contextDir: docker
-      sourceSecret: 
-        name: cd-user-token
+      type: Binary
     strategy:
       type: Docker
       dockerStrategy: {} 
