--- a/rundeck-jobs/openshift/check insecure OC routes.yaml
+++ b/rundeck-jobs/openshift/check insecure OC routes.yaml
@@ -11,6 +11,7 @@
         attachLog: true
         recipients: administrator@opendevstack.org
         subject: OpenDevsStack OCP security alert!
+  notifyAvgDurationThreshold: null
   options:
   - description: the openshift token to access OpenDevsStack OCP
     name: openshift_api_token
@@ -40,9 +41,6 @@
       exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker build -t oc .
     - exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker run --rm oc /bin/bash -c "ls -ls && ./check_ocp_secure_routes.sh -h ${globals.openshift_apihost} -t ${option.openshift_api_token} -p ${option_project_names}"
     keepgoing: false
-    pluginConfig:
-      WorkflowStrategy:
-        node-first: null
     strategy: node-first
   uuid: f7ef4a51-6417-4b97-a658-f85527185447
 
