Changed from ENV to ARG

--- a/ocp-templates/Dockerfile
+++ b/ocp-templates/Dockerfile
@@ -2,9 +2,10 @@ FROM centos:7
 
 MAINTAINER "Andreas Bellmann" <andreas.bellmann@opitz-consulting.com>
 
+ARG OC_IP=localhost
+
 ENV OS_CLI_VERSION_MAJOR 3.4
 ENV OS_CLI_VERSION_MINOR 1.2-1
-ENV OC_IP
 
 COPY root.ca /root.ca
 RUN ls /etc/ssl/certs/ && \
