Install openssl to ensure it is there to retrieve certificate

--- a/ocp-templates/Dockerfile
+++ b/ocp-templates/Dockerfile
@@ -7,9 +7,11 @@ ARG OC_IP=localhost
 ENV OS_CLI_VERSION_MAJOR 3.4
 ENV OS_CLI_VERSION_MINOR 1.2-1
 
+RUN yum -y install openssl
+
 RUN ls /etc/ssl/certs/ && \
         openssl s_client -connect ${OC_IP} < /dev/null | \
-        sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' >> /etc/ssl/certs/ca-bundle.crt
+        sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' >> /etc/ssl/certs/ca-bundle.crt && \
         cat /etc/ssl/certs/ca-bundle.crt
 
 RUN yum -y install curl ca-certificates bash-completion vim git && \
