--- a/boilerplates/be-python-flask/Jenkinsfile
+++ b/boilerplates/be-python-flask/Jenkinsfile
@@ -15,7 +15,7 @@ library identifier: 'ods-library@latest', retriever: modernSCM(
 
 // See readme of shared library for usage and customization.
 odsPipeline(
-  image: "${dockerRegistry}/cd/jenkins-slave-maven",
+  image: "${dockerRegistry}/cd/jenkins-slave-python",
   projectId: projectId,
   componentId: componentId,
   verbose: true,
@@ -33,6 +33,11 @@ def stageBuild(def context) {
   stage('Build') {
     withEnv(["TAGVERSION=${context.tagversion}"]) {
       sh "python src/tests.py"
+      // PEP8
+      sh '''
+         pycodestyle --show-source --show-pep8 src/*
+         pycodestyle --statistics -qq src/*
+      '''
     }
     sh "cp -r src docker/dist"
   }
