the root ca could be self signed

--- a/ocp-templates/Dockerfile
+++ b/ocp-templates/Dockerfile
@@ -10,7 +10,7 @@ ENV OS_CLI_VERSION_MINOR 1.2-1
 RUN yum -y install openssl
 
 RUN ls /etc/ssl/certs/ && \
-        openssl s_client -connect ${OC_IP} < /dev/null | \
+        openssl s_client -connect ${OC_IP} --insecure-skip-tls-verify < /dev/null | \
         sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' >> /etc/ssl/certs/ca-bundle.crt && \
         cat /etc/ssl/certs/ca-bundle.crt
 
