--- a/ocp-templates/Dockerfile
+++ b/ocp-templates/Dockerfile
@@ -15,7 +15,8 @@ RUN gnutls-cli --print-cert ${OC_IP} </dev/null| sed -ne '/-BEGIN CERTIFICATE-/,
 # RUN \
 #        openssl s_client -connect ${OC_IP} < /dev/null | \
 #        sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' >> /etc/ssl/certs/ca-bundle.crt && \
-		cat /etc/ssl/certs/ca-bundle.crt#
+
+RUN	cat /etc/ssl/certs/ca-bundle.trust.crt
 
 RUN yum -y install curl ca-certificates bash-completion vim git && \
     curl -s -L https://mirror.openshift.com/pub/openshift-v3/clients/3.7.0-0.198.0/linux/oc.tar.gz -o /tmp/oc.tar.gz && \
