--- a/rundeck-jobs/common/cleanup-tmp.yaml
+++ b/rundeck-jobs/common/cleanup-tmp.yaml
@@ -1,5 +1,4 @@
-- defaultTab: summary
-  description: remove all tmp directories & docker containers running older than specified days
+- description: remove all tmp directories & docker containers running older than specified days
   executionEnabled: true
   group: common
   id: 5cc8e676-b38d-4f2c-82b4-59ea2d7c0261
