--- a/rundeck-jobs/openshift/create-component.yaml
+++ b/rundeck-jobs/openshift/create-component.yaml
@@ -1,5 +1,4 @@
-- defaultTab: summary
-  description: 'creates an openshift component (for project bhw and component bhw-be:
+- description: 'creates an openshift component (for project bhw and component bhw-be:
     bhw-be)'
   executionEnabled: true
   group: openshift
