Rundeck changes upstream merge (#21)
* Initial commit

* Update slaves

* Update jenkins-slaves

* Update rundeck-jobs

* Change to new ODS structure

* more structure refactoring

* structure change fix

* Fix rundeck jobs

* Initial commit

* Initial commit

* root ca addition

* the root ca could be self signed

* copy cacerts

* copy cacerts

* copy cacerts

* copy cacerts

* copy cacerts

* try with gnutls

* try with gnutls

* try with gnutls

* try with gnutls

* try with gnutls

* try with gnutls

* fix for #12 root ca

* cleanup

* uptake commit

--- a/rundeck-jobs/common/cleanup-tmp.yaml
+++ b/rundeck-jobs/common/cleanup-tmp.yaml
@@ -1,4 +1,4 @@
-- description: remove all tmp directories older than specified days
+- description: remove all tmp directories & docker containers running older than specified days
   executionEnabled: true
   group: common
   id: 5cc8e676-b38d-4f2c-82b4-59ea2d7c0261
@@ -33,10 +33,10 @@
 
         echo "Pruning unused Docker data"
         sudo docker system prune --force
+
+        echo "Pruning running docker containers"
+        docker ps | grep 'day[s]* ago' | awk '{print $1}' | xargs docker rm -f
     keepgoing: false
-    pluginConfig:
-      WorkflowStrategy:
-        node-first: null
     strategy: node-first
   uuid: 5cc8e676-b38d-4f2c-82b4-59ea2d7c0261
 
