--- a/rundeck-jobs/common/verify global rundeck settings.yaml
+++ b/rundeck-jobs/common/verify global rundeck settings.yaml
@@ -2,7 +2,7 @@
   executionEnabled: true
   group: common
   id: ec883e36-6ede-4017-8750-1aa0014cc1e3
-  loglevel: DEBUG
+  loglevel: INFO
   name: verify global rundeck settings
   nodeFilterEditable: false
   options:
@@ -21,7 +21,7 @@
     - description: clone oc script project
       exec: cd /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters && ls -la && cd ocp-templates && git checkout -b production origin/production
     - description: create docker container for openshift client
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker build -t oc .
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker build --build-arg OC_IP=${globals.openshift_apihost_lookup} -t oc .
     - description: OC login test
       exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates  && sudo docker run --rm oc /bin/bash -c "oc login ${globals.openshift_apihost} --token=${option.openshift_api_token}"
     - description: verify nexus host availability
@@ -31,9 +31,6 @@
     - description: verify openshift registry access
       exec: sudo docker login -u ${globals.openshift_user} -p ${option.openshift_api_token} ${globals.openshift_dockerregistry}
     keepgoing: false
-    pluginConfig:
-      WorkflowStrategy:
-        node-first: null
     strategy: node-first
   uuid: ec883e36-6ede-4017-8750-1aa0014cc1e3
 
