--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -41,7 +41,8 @@ ADD ./contrib/settings.xml $HOME/.m2/
 # install gradle ..
 ADD gradlew /tmp/gradlew
 RUN mkdir -p /tmp/gradle
-ADD gradle/* /tmp/gradle  
+ADD gradle/* /tmp/gradle/
+RUN ls /tmp/gradle/  
 
 RUN /tmp/gradlew -version
 
