set gradle User home

--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -16,7 +16,8 @@ ENV MAVEN_VERSION=3.3 \
     BASH_ENV=/usr/local/bin/scl_enable \
     ENV=/usr/local/bin/scl_enable \
     PROMPT_COMMAND=". /usr/local/bin/scl_enable" \
-	HOME=/home/jenkins
+	HOME=/home/jenkins \
+    GRADLE_USER_HOME=/home/jenkins/.gradle
 	
 
 # Install Maven
@@ -50,3 +51,4 @@ RUN /tmp/gradlew -version
 RUN chown -R 1001:0 $HOME && \
     chmod -R g+rw $HOME
 USER 1001
+
