Task/add gradle into slave (#23)
* gradle installation on the slave - 4.8.1 - exactly as the quickstarters

--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -15,12 +15,16 @@ LABEL com.redhat.component="jenkins-slave-maven-rhel7-docker" \
 ENV MAVEN_VERSION=3.3 \
     BASH_ENV=/usr/local/bin/scl_enable \
     ENV=/usr/local/bin/scl_enable \
-    PROMPT_COMMAND=". /usr/local/bin/scl_enable"
+    PROMPT_COMMAND=". /usr/local/bin/scl_enable" \
+	HOME=/home/jenkins \
+    GRADLE_USER_HOME=/home/jenkins/.gradle
+	
 
 # Install Maven
 RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --disable epel >/dev/null || : && \
     INSTALL_PKGS="java-1.8.0-openjdk-devel.x86_64 rh-maven33*" && \
+    alternatives --set java $(alternatives --display java | awk '/family.*x86_64/ { print $1; }') && \
     x86_EXTRA_RPMS=$(if [ "$(uname -m)" == "x86_64" ]; then echo -n java-1.8.0-openjdk-devel.i686 ; fi) && \
     yum install -y $INSTALL_PKGS $x86_EXTRA_RPMS && \
     # have temporarily removed the validation for java to work aroun known rhel 7.5 problem fixed in fedora; jupierce and gmontero are working with
@@ -36,6 +40,15 @@ ADD contrib/bin/scl_enable /usr/local/bin/scl_enable
 ADD contrib/bin/configure-slave /usr/local/bin/configure-slave
 ADD ./contrib/settings.xml $HOME/.m2/
 
+# install gradle ..
+ADD gradlew /tmp/gradlew
+RUN mkdir -p /tmp/gradle/wrapper
+ADD gradle/* /tmp/gradle/wrapper
+RUN ls /tmp/gradle/wrapper 
+
+RUN /tmp/gradlew -version
+
 RUN chown -R 1001:0 $HOME && \
     chmod -R g+rw $HOME
 USER 1001
+
